--- a/your_model/configs.yaml
+++ b/your_model/configs.yaml
@@ -5,13 +5,12 @@ model_id: YourModel
 use_mGPU: False
 
 # wandb
-use_wandb: False
+use_wandb: True
 wandb_alert_thres: 1000
 
 # dataset
 train_dataset_root_list: [
-                '/home/compu/dataset/CelebHQ',
-                '/home/compu/dataset/ffhq16k'
+                '/storage/Dataset/ffhq16k',
             ]
 valid_dataset_root: assets/valid
 
@@ -22,8 +21,8 @@ beta1: 0
 beta2: 0.999
 
 # Scheduler options
-scheduler_cycle : 1000
-decay_start_step : 1000
+scheduler_type: LambdaLR
+scheduler_step: 100
 
 # weight of loss
 W_adv: 1
@@ -35,12 +34,12 @@ W_attr: 10
 
 # hyperparameters
 same_prob: 0.2
-batch_per_gpu: 8
+batch_per_gpu: 2
 max_step: 400000
 
 # log cycle
 loss_cycle: 10
-test_cycle: 1000
+test_cycle: 100
 ckpt_cycle: 10000
 
 # ckpt path
