--- a/configs/train_configs.yaml
+++ b/configs/train_configs.yaml
@@ -1,7 +1,7 @@
 # warning: do not use *tuple* in yaml file
 
 # model 
-model_id: MyModel
+model_id: color transfer net
 
 # multi-GPUs
 use_mGPU: True
@@ -20,6 +20,11 @@ train_dataset_root_list: [
                 '../dataset/ffhq16k'
             ]
 
+val_dataset_root_list: [
+                '../dataset/CelebHQ',
+                '../dataset/ffhq16k'
+            ]
+
 save_root: train_result
 
 # learning rate
@@ -27,27 +32,27 @@ lr_G: 0.0001
 lr_D: 0.00001
 
 # optimizer 
-optimizer: Ranger # [Ranger, Adam]
-betas: [0.95, 0.999] # default: Adam (0.9, 0.999) / Ranger (0.95, 0.999)
+optimizer: Adam # [Ranger, Adam]
+betas: [0.9, 0.999] # default: Adam (0.9, 0.999) / Ranger (0.95, 0.999)
 
 # weight of loss
 W_adv: 1
-W_id: 5
-W_recon: 10
-W_cycle: 10
-W_lpips: 10
-W_attr: 20
+W_vgg: 10
+W_recon: 0
+W_cycle: 0
 W_feat: 10
 
 # hyperparameters
 same_prob: 0.2
-batch_per_gpu: 2
+batch_per_gpu: 4
+val_batch_per_gpu: 1
 max_step: 400000
 
 # log cycle
 loss_cycle: 10
-test_cycle: 1000
-ckpt_cycle: 10000
+test_cycle: 500
+valid_cycle: 500
+ckpt_cycle: 2500
 
 # ckpt path
 # load checkpoints from ./train_result/{ckpt_id}/ckpt/G_{ckpt_step}.pt
